new: student add, edit, display and popup book

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,19 +3,6 @@
 </section>
 <section class="py-5">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-sm-7">
-        <app-add></app-add>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="py-5">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-sm-10">
-        <app-display></app-display>
-      </div>
-    </div>
+      <router-outlet></router-outlet>
   </div>
 </section>
