--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item mx-5">
-                    <a class="nav-link" href="#">Student</a>
+                    <a class="nav-link" routerLink="student" routerLinkActive="active">Student</a>
                 </li>
                 <li class="nav-item mx-5">
-                    <a class="nav-link">Books</a>
+                    <a class="nav-link" routerLink="book" routerLinkActive="active">Books</a>
                 </li>
             </ul>
         </div>
