--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-sm bg-light">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <div class="navbar-collapse justify-content-center">
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item mx-5">
                     <a class="nav-link" routerLink="student" routerLinkActive="active">Student</a>
